# fastapi-production-skeleton

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fastapi-app.service  fastapi-worker.service  gunicorn.conf.py  main.py  pyproject.toml  pytest.ini
alembic/: README.md  env.py
alembic/versions/: 001_initial_schema.py  002_add_job_name_email_to_tasks.py  003_add_worker_id_to_tasks.py
apps/: models.py
apps/identity/: models.py  repository.py  service.py
apps/identity/api/: router.py
apps/tasks/: models.py  repository.py  service.py  storage.py  worker.py  worker_manager.py
apps/tasks/api/: router.py
apps/tasks/plugins/: README.md  __init__.py  base.py
apps/tasks/plugins/seq_tool/: schemas.py  script.py
apps/tasks/scripts/: README.md  __init__.py  run_task.py
docs/: 01_CONFIGURATION.md
framework/: config.py  response.py  security.py
framework/database/: base.py  manager.py  mysql_driver.py  redis_driver.py
framework/exceptions/: handler.py
framework/logging/: logger.py
framework/middleware/: logging_md.py
framework/notification/: __init__.py  notifier.py
framework/queue/: __init__.py  task_queue.py
framework/repository/: __init__.py  base.py  unit_of_work.py
tests/: README.md  cleanup_test_data.py  conftest.py  test_auth.py  test_simple.py  test_tasks_api.py
